[package]
name = "pathio"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dominik Kaspar"]
repository = "https://github.com/bytestring-net/pathio"
keywords = ["path", "unix", "directory", "hierarchy", "sandbox"]
categories = ["data-structures", "database", "filesystem", "simulation"]
description = "Data type for storing generic data on a virtual path tree hierarchy. The data is stored in memory, this is not OS file system abstraction, but immitation"
readme = "README.md"

[dependencies]
ahash = {version = "0.8.3"}
thiserror = "1.0.48"
colored = "2.0.4"

serde = {version = "1.0.188", default_features = false, features = ["derive"], optional = true }
bevy = {version = "0.11.2", default_features = false, optional = true }

[features]
serde = ["dep:serde", "ahash/serde"]
bevy = ["dep:bevy"]
