[package]
name        = "pathio"
version     = "0.3.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
authors     = ["Dominik Kaspar"]
repository  = "https://github.com/bytestring-net/pathio"
keywords    = [ "path-tree", "path", "unix", "directory", "hierarchy"]
categories  = ["data-structures", "database", "filesystem"]
description = "PathTree data structure similar to HashMap, but for storing generic data organized in directories"
readme      = "README.md"

[dependencies]
ahash     = "^0.8.6"
thiserror = "^1.0.51"
colored   = "^2.1.0"

serde = {version = "^1", default_features = false, optional = true, features = ["derive"] }
bevy  = {version = "^0", default_features = false, optional = true }

[features]
serde = ["dep:serde", "ahash/serde"]
bevy  = ["dep:bevy"]
